[package]
name = "qalqulator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A calculator that uses (and outputs) rational numbers wherever possible."
documentation = "https://docs.rs/qalqulator"
repository = "https://github.com/Gadiguibou/qalqulator/"
readme = "README.md"
keywords = ["calculator", "command-line", "arbitrary-precision", "rational-numbers"]
categories = ["command-line-utilities", "mathematics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
directories = "4.0.1"
gcd = "2.1.0"
pest = "2.4.0"
pest_derive = "2.4.0"
rustyline = "10.0.0"
